--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,3 @@
-PORT=5000
-MONGO_URI=your_mongodb_connection
-JWT_SECRET=your_jwt_secret
+MONGO_URI=mongodb://localhost:27017/project_management
+JWT_SECRET=your_jwt_secret_key_here
+PORT=3000
